<resources>
    <string name="app_name">NutechWallet</string>
    <string name="balance">Balance</string>
    <string name="_20_000">20.000</string>
    <string name="_50_000">50.000</string>
    <string name="_100_000">100.000</string>
    <string name="_150_000">150.000</string>
    <string name="_200_000">200.000</string>
    <string name="_250_000">250.000</string>
    <string name="_300_000">300.000</string>
    <string name="_500_000">500.000</string>
    <string name="or_enter_a_custom_amount">Or enter a custom amount</string>
    <string name="top_up">Top up</string>
    <string name="firstname_lastname">Firstname Lastname</string>
    <string name="transfer">Transfer</string>
    <string name="top_up">Top up</string>
    <string name="history">History</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_email">Enter email</string>
    <string name="email">Email</string>
    <string name="register_account">Register Account</string>
    <string name="your_email">Your email</string>
    <string name="password">Password</string>
    <string name="your_password">Your Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="smith">Smith</string>
    <string name="john">John</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="balance">Balance</string>
    <string name="amount">Amount</string>
    <string name="transfer">Transfer</string>
    <string name="name">name</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="update">Update</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="transactiontype">TransactionType</string>
    <string name="id">ID</string>
    <string name="amount">Amount</string>
    <string name="time">Time</string>
</resources>